# python-template

./: README.md  pyproject.toml
src/: hello.py
test/: test_add.py
tests/: test_add.py
